# git-guardian

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/git_guardian.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/guardian/: analyzer.py  config.py  installer.py  main.py
