[project]
name = "git-guardian-ai" # Note: 'git-guardian' might be taken. Choose a unique name.
version = "0.1.0"
description = "An AI-powered Git pre-commit hook using Ollama to review code."
authors = [{ name = "Your Name", email = "your@email.com" }]
license = { text = "MIT" } # Add a license
readme = "README.md"
requires-python = ">=3.8"
keywords = ["git", "hook", "ai", "llm", "codereview", "ollama"] # Add keywords for discoverability
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "requests>=2.28.0",
    "typer[all]>=0.9.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/Nirav0702/git-guardian" # Link to your repo
"Bug Tracker" = "https://github.com/Nirav0702/git-guardian/issues"

[project.scripts]
guardian = "guardian.main:app"